# api/swagger.yaml
@@ -27,12 +27,35 @@ paths:
       parameters:
         - name: "file"
           in: "formData"
-          description: The uploaded file data
+          description: "GeoJSON file to create table from. Will be validated during upload"
           required: true
           type: "file"
-        - name: "table"
+        - name: "table" 
           in: "formData"
           type: "string"
+          description: "If not set, generates table name"
+        - name: "level"
+          in: "formData"
+          type: "number"
+          format: "int64"
+          description: "Integer. The higher the integer, the closer to the ground. Can be used to set a hierarchy. If not set, will be set to 1 (highest hierarchy. Can later be edited"
+        - name: "name_column"
+          in: "formData"
+          type: "string"
+          required: true
+          description: "The name that can be used for display and to search on"
+        - name: "id_column"
+          in: "formData"
+          type: "string"
+          description: "The name of the column in the source file that holds unique identifiers. Will use autogenerated when not set"
+        - name: "action"
+          in: "formData"
+          type: "string"
+          default: "append"
+          description: "can be append or replace, should the table exist."
+          enum: 
+          - append
+          - replace
       responses:
         405:
           description: "Invalid input"
